Fix display of "show logs" button on mobile

--- a/mbf-site/src/css/App.css
+++ b/mbf-site/src/css/App.css
@@ -45,10 +45,21 @@ body {
     height: auto;
 }
 
-#chooseDevice {
-    margin: 0 auto;
-    display: block;
+.chooseDeviceContainer {
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.chooseDeviceContainer > button {
     font-size: medium;
+}
+
+.chooseDeviceContainer > span {
+    position: absolute;
+    right: 0;
 }
 
 .fireFox {
