--- a/mbf-site/src/css/Modal.css
+++ b/mbf-site/src/css/Modal.css
@@ -26,7 +26,6 @@
 }
 
 .syncingWindow {
-    position: relative;
     display: flex;
     flex-direction: column;
     gap: 10px;
