--- a/mbf-site/src/css/OpenLogs.css
+++ b/mbf-site/src/css/OpenLogs.css
@@ -1,12 +1,10 @@
 .openLogs {
-    position: fixed;
-    right: 0;
-    padding: 0;
-    background-color: rgba(0, 0, 0, 0.7);
+    float: right;
+    cursor: pointer;
 
     display: flex;
     align-items: center;
     gap: 5px;
     padding: 7px;
-    border-radius: 0px 0px 0px 5px;
+    border-radius: 5px;
 }
