--- a/mbf-site/src/css/index.css
+++ b/mbf-site/src/css/index.css
@@ -25,6 +25,10 @@ a {
     font-weight: bold;
 }
 
+.floatRight {
+    float: right;
+}
+
 .coverScreen {
     z-index: 2;
 }
